# MyStand-Parser-Tools

./: .gitignore  LICENSE  README.md  SOURCE_MAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENT-SKILL.md  ARCHITECTURE.md  CAPABILITY-MATRIX.md  DEPLOYMENT.md  INSTALL-AND-TEST.md  THIRD-PARTY.md  TOOLS.md  original-parser-readme.md
scripts/: http_smoke.py  verify_parser_samples.py
src/mystand_parser_tools/: __init__.py  cli.py  server.py  xiaoban.py
