[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mystand-parser-tools"
version = "0.1.1"
description = "My Stand common parser tools for Agents, modules, files, URLs, WeChat articles, OCR, Office, PDF, ZIP, and CAD."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "markitdown[xlsx,docx,pdf,pptx]>=0.1.3",
  "trafilatura>=1.12.0",
  "lxml_html_clean>=0.4.1",
  "html2text>=2024.2.26",
  "ezdxf>=1.3.4",
  "wechat-article-parser==0.0.5",
]

[project.optional-dependencies]
test = [
  "openpyxl>=3.1.5",
  "python-docx>=1.1.2",
  "python-pptx>=1.0.2",
  "reportlab>=4.2.0",
  "pillow>=10.4.0",
]

[project.scripts]
mystand-parser = "mystand_parser_tools.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mystand_parser_tools"]
